--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <div class="home-hero">
       <div class="home-wrap">
         <div class="brandbar" aria-label="Brand">
-          <div class="brand">Ivy Academy <small>Premier English & IELTS Training</small></div>
+          <div class="brand"><small>English and IELTS made simpler</small></div>
         </div>
 
         <div class="hero-grid">
