--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <input type="hidden" name="_subject" value="New message from Ivy Academy" />
             <button class="btn dark" type="submit">Submit</button>
             <div class="notice" id="contact-status" aria-live="polite"></div>
-            <p class="muted">This form emails <strong>somikds3@gmail.com</strong>.</p>
+            <p class="muted">This form emails <strong>sen.sen.ngn@gmail.com</strong>.</p>
           </form>
         </div>
       </div>
