--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           </div>
           <div class="item">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4.236l-8 5.333L4 8.236V6l8 5.333L20 6v2.236z"/></svg>
-            <div><div class="label">Email</div><a href="mailto:somikds3@gmail.com">somikds3@gmail.com</a></div>
+            <div><div class="label">Email</div><a href="mailto:somikds3@gmail.com">sen.sen.ngn@gmail.com</a></div>
           </div>
           <div class="item" style="flex-direction:column;">
             <div class="label">Social</div>
