--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <h3 id="contact-card-title">Direct contact</h3>
           <div class="item">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.03-.24c1.12.37 2.33.57 3.56.57a1 1 0 011 1v3.5a1 1 0 01-.9 1 19 19 0 01-8.1-2.3 18.85 18.85 0 01-6.56-6.56A19 19 0 013 5.9a1 1 0 011-0.9H7.5a1 1 0 011 1c0 1.23.2 2.44.57 3.56a1 1 0 01-.24 1.03l-2.2 2.2z"/></svg>
-            <div><div class="label">Phone</div><a href="tel:+91XXXXXXXXXX">+91 XXXXX XXXXX</a></div>
+            <div><div class="label">Phone</div><a href="tel:+919038600927">+919038600927</a></div>
           </div>
           <div class="item">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4.236l-8 5.333L4 8.236V6l8 5.333L20 6v2.236z"/></svg>
